2023-10-09T16:22:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6459262842 # 849
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 249 522 / 264 554
* notice: next accum: outdated-unq outdated-all / unq all: 250 525 / 264 555
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-25] / [2023-10-09]

2023-10-09T08:23:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6454120500 # 848
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 249 522 / 263 553
* notice: next accum: outdated-unq outdated-all / unq all: 249 522 / 264 554
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-25 2023-10-09]

2023-10-09T01:16:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6451226394 # 847
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-09
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 249 522 / 262 552
* notice: next accum: outdated-unq outdated-all / unq all: 249 522 / 263 553
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-25 2023-10-08]

2023-10-08T16:20:29Z: