@@ -1,8 +1,8 @@
 {
   "timestamp" : "2023-10-10T08:22:36Z",
   "count" : 2,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -1, +3 ],
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
