@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-09T16:22:31Z",
+  "timestamp" : "2023-10-10T08:22:36Z",
   "count_outdated" : 525,
   "uniques_outdated" : 250,
-  "count" : 555,
-  "uniques" : 264,
+  "count" : 557,
+  "uniques" : 265,
   "clones" : [
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -108,6 +108,15 @@
       "timestamp": "2023-10-09T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
