@@ -1,10 +1,10 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2023-09-26T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2023-10-09T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-10T00:00:00Z",
       "count": 2,
       "uniques": 1
     }
